--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,21 +1,60 @@
+# Command prefix used to trigger the bot
 PREFIX=.
-AUTO_READ_STATUS=non
-AUTO_DOWNLOAD_STATUS=non
+
+# If set to "yes", the bot will automatically view all WhatsApp statuses
+AUTO_READ_STATUS=no
+
+# If set to "yes", the bot will automatically download all WhatsApp statuses
+AUTO_DOWNLOAD_STATUS=no
+
+# The display name of your bot
 BOT_NAME=Zokou-MD
+
+# The visual theme for bot menus (use a preset name or comma-separated media links)
 MENU_THEME=LUFFY
-PM_PERMIT=non
-MODE_PUBLIC=oui
+
+# If "no", commands won't work in private chats for others
+PM_PERMIT=no
+
+# If "yes", the bot is available to everyone; if "no", only the owner can use it
+MODE_PUBLIC=yes
+
+# Controls the bot's visible activity:
+# 1 = online, 2 = typing, 3 = recording, empty = show real status
 PRESENCE=1
+
+# WhatsApp session ID (used to log in to your account)
 SESSION_ID=
+
+# Your display name (owner's name)
 OWNER_NAME=Djalega++
-OWNER_NUMBER=22891733300
+
+# Your phone number in international format (e.g., country code + number)
+OWNER_NUMBER=228 XX XX XX XX
+
+# Number of warnings before a user is penalized
 WARN_COUNT=3
-STARTING_BOT_MESSAGE=oui
-PM_CHATBOT=non
-HEROKU=non
-ANTI_COMMAND_SPAM=non
-ANTI_DELETE_MESSAGE=oui
-AUTO_REACT_MESSAGE=non
-AUTO_REACT_STATUS=non
+
+# If "yes", the bot sends a welcome message on startup
+STARTING_BOT_MESSAGE=yes
+
+# If "yes", the bot replies to private messages automatically
+PM_CHATBOT=no
+
+# If "yes", adds a delay between commands to prevent spamming
+ANTI_COMMAND_SPAM=no
+
+# If "yes", messages deleted by others will be sent to you privately
+ANTI_DELETE_MESSAGE=no
+
+# If "yes", the bot automatically reacts to incoming messages
+AUTO_REACT_MESSAGE=no
+
+# If "yes", the bot automatically reacts to statuses
+AUTO_REACT_STATUS=no
+
+# Set the timezone for time-related features (e.g., scheduled messages)
 TIME_ZONE=Africa/Sao_Tome
+
+# Server environment used to run the bot (e.g., HEROKU, VPS, etc.)
 SERVER=vps
