--- a/themes/JINX.json
+++ b/themes/JINX.json
@@ -4,9 +4,24 @@
         "https://i.pinimg.com/736x/89/44/0f/89440fc96972c7963681bd5dff1028de.jpg",
         "https://i.pinimg.com/736x/e3/79/7c/e3797ccea81ff2b1d01e74dce4ad0317.jpg"
     ],
-    "video": [],
+    "video": [
+        "https://files.catbox.moe/ugtpha.mp4",
+        "https://files.catbox.moe/mls5wz.mp4",
+        "https://files.catbox.moe/vaspye.ts"
+    ],
     "quotes": [
-        "Let's blow something up!",
-        "Rules are made to be broken... like buildings! Or people!"
+        "Let's blow everything up!",
+        "Rules are made to be broken... like buildings! Or people!",
+        "You've never had to survive in this world.",
+        "You're not the only one who's had a hard life.",
+        "You let me down!",
+        "I'm not crazy, I'm different.",
+        "They all abandoned me, but not you.",
+        "I'll show them they were wrong.",
+        "It's always more fun when it explodes.",
+        "You want to play? Then, let's play!",
+        "I'm a ticking time bomb.",
+        "Nobody understands me, except my toys.",
+        "We're going to have so much fun!"
     ]
 }
