--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -58,3 +58,6 @@ TIME_ZONE=Africa/Sao_Tome
 
 # Server environment used to run the bot (e.g., HEROKU, VPS, etc.)
 SERVER=vps
+
+# Set a packname and author for your stickers
+STICKER_PACKNAME=made with ❤; ZOKOU-MD
