--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@faouzkk/tiktok-dl": "^1.0.1",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
+    "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys#92b4c68de0d1e640108d7d840e080c069e975bf6",
     "@xaviabot/fb-downloader": "^1.0.14",
     "aptoide_scrapper_fixed": "^1.0.2",
     "axios": "^1.7.9",
@@ -45,7 +45,7 @@
     "google-tts-api": "^2.0.2",
     "heroku-client": "^3.1.0",
     "human-readable": "^0.2.1",
-    "jimp": "^1.6.0",
+    "jimp": "^0.16.0",
     "link-preview-js": "^3.0.12",
     "lru-cache": "^11.1.0",
     "moment-timezone": "^0.5.46",
