--- a/package.json
+++ b/package.json
@@ -1,68 +1,66 @@
 {
-  "name": "zokou-md",
-  "version": "3.1.2",
-  "description": "Best WhatsApp Bot",
+"name": "ZANGETSU-MD",
+  "version": "1.0.0",
+  "description": "A WhatsApp Bot Created By SIR YNWX",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "pm2 start index.js --attach --name zokou",
-    "zokou": "pm2 start index.js --attach --name zokou",
-    "stop": "pm2 stop zokou"
+    "start": "pm2 start index.js --deep-monitoring --attach --name ZANGETSU-MD",
+    "stop": "pm2 stop ZANGETSU-MD",
+    "restart": "pm2 restart ZANGETSU-MD"
   },
-  "keywords": [
-    "bot",
-    "Baileys",
-    "Zokou",
-    "whatsapp",
-    "whatsapp-bot",
-    "Fedora",
-    "FaouzKK"
-  ],
-  "author": "Fedora && FaouzKK",
-  "license": "ISC",
   "dependencies": {
-    "@faouzkk/lyrics-finder": "^1.0.3",
-    "@faouzkk/tiktok-dl": "^1.0.1",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "npm:@faouzkk/baileys@3.0.0",
-    "@xaviabot/fb-downloader": "^1.0.14",
-    "aptoide_scrapper_fixed": "^1.0.2",
+    "baileys": "npm:baileys-pro@0.0.5",
     "axios": "^1.7.9",
-    "better-sqlite3": "^11.10.0",
-    "canvacord": "^5.4.8",
-    "cheerio": "^1.0.0",
-    "child_process": "^1.0.2",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "@adiwajshing/keyed-db": "latest",
+    "@dark-yasiya/scrap": "1.0.1",
+    "@dark-yasiya/yt-dl.js": "latest",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@mrnima/facebook-downloader": "1.0.0",
+    "@mrnima/tiktok-downloader": "1.0.0",
+    "@vitalets/google-translate-api": "^9.2.0",
+    "acrcloud": "^1.4.0",
+    "adm-zip": "^0.5.16",
+    "api-dylux": "1.8.5",
+    "btch-downloader": "^2.2.9",
+    "better-sqlite3": "*",
+    "buffer": "^6.0.3",
+    "canvacord": "^5.4.9",
+    "cheerio": "^1.0.0-rc.12",
+    "crypto-digest-sync": "^1.0.0",
+    "crypto-js": "latest",
+    "dotenv": "^16.0.0",
+    "express": "latest",
     "ffmpeg": "^0.0.4",
-    "file-type": "^16.5.4",
-    "fluent-ffmpeg": "^2.1.3",
-    "form-data": "^4.0.1",
+    "file-type": "^16.5.3",
+    "file_size_url": "1.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
-    "fs-extra": "^11.2.0",
-    "g-i-s": "^2.1.7",
+    "fs-extra": "^11.1.0",
     "google-tts-api": "^2.0.2",
-    "heroku-client": "^3.1.0",
-    "human-readable": "^0.2.1",
-    "jimp": "^0.16.0",
-    "link-preview-js": "^3.0.12",
-    "lru-cache": "^11.1.0",
-    "moment-timezone": "^0.5.46",
-    "mumaker": "^2.0.0",
-    "node-cache": "^5.1.2",
-    "node-catbox": "^3.3.0",
-    "node-cron": "^3.0.3",
-    "os": "^0.1.2",
+    "javascript-obfuscator": "^4.0.0",
+    "jimp": "^0.16.1",
+    "megajs": "^1.1.0",
+    "mongoose": "^8.0.0",
+    "mongodb": "^6.4.0",
+    "mrnima-moviedl": "1.0.0",
+    "node-cache": "^5.1.1",
+    "node-fetch": "^2.6.1",
+    "node-webpmux": "^3.1.0",
     "path": "^0.12.7",
-    "pino": "^9.6.0",
-    "pm2": "^5.4.3",
-    "prompt-sync": "^4.2.0",
-    "sharp": "^0.32.2",
-    "simple-git": "^3.28.0",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.14.0",
+    "pino": "^7.0.5",
+    "pm2": "^6.0.6",
+    "qrcode-reader": "^1.0.4",
+    "qrcode-terminal": "^0.12.0",
+    "ruhend-scraper": "8.0.3",
+    "sequelize": "^6.37.5",
+    "sqlite3": "latest",
+    "util": "^0.12.4",
+    "vm": "^0.1.0",
     "wa-sticker-formatter": "^4.4.4",
-    "yt-search": "^2.12.1"
+    "wa_set_pkg": "1.0.5",
+    "yt-search": "2.11.1"
   }
 }
