--- a/set.env
+++ b/set.env
@@ -1,5 +1,5 @@
 # Command prefix used to trigger the bot
-PREFIX=.
+PREFIX=?
 
 # If set to "yes", the bot will automatically view all WhatsApp statuses
 AUTO_READ_STATUS=no
@@ -8,7 +8,7 @@ AUTO_READ_STATUS=no
 AUTO_DOWNLOAD_STATUS=no
 
 # The display name of your bot
-BOT_NAME=Zokou-MD
+BOT_NAME=HOPE
 
 # The visual theme for bot menus (use a preset name or comma-separated media links)
 MENU_THEME=LUFFY
@@ -17,20 +17,20 @@ MENU_THEME=LUFFY
 PM_PERMIT=no
 
 # If "yes", the bot is available to everyone; if "no", only the owner can use it
-MODE_PUBLIC=yes
+MODE_PUBLIC=no
 
 # Controls the bot's visible activity:
 # 1 = online, 2 = typing, 3 = recording, empty = show real status
-PRESENCE=1
+PRESENCE=
 
 # WhatsApp session ID (used to log in to your account)
-SESSION_ID=
+SESSION_ID=ZOKOU-MD-WHATSAPP-BOT=>47fd0331f9
 
 # Your display name (owner's name)
-OWNER_NAME=Djalega++
+OWNER_NAME=YNWX & HOPE
 
 # Your phone number in international format (e.g., country code + number)
-OWNER_NUMBER=228 XX XX XX XX
+OWNER_NUMBER=241077027033
 
 # Number of warnings before a user is penalized
 WARN_COUNT=3
@@ -60,4 +60,4 @@ TIME_ZONE=Africa/Sao_Tome
 SERVER=vps
 
 # Set a packname and author for your stickers
-STICKER_PACKNAME=made with ❤; ZOKOU-MD
+STICKER_PACKNAME=made with ❤; HOPE
